--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
                                                         </div>
 
                                                     </div>
+                                                    <div class="tab-footer">
+                                                        <p><a href="https://www.mixcloud.com/cdawkins" target="_blank">Hear more on Mixcloud ></a></p>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="tab-pane fade" id="rn-experience" role="tabpanel" aria-labelledby="experience">
@@ -314,6 +317,9 @@
 
                                                         </div>
 
+                                                    </div>
+                                                    <div class="tab-footer">
+                                                        <p><a href="https://coreydawkins.bandcamp.com" target="_blank">Hear more on Bandcamp ></a></p>
                                                     </div>
                                                 </div>
                                             </div>
