--- a/index.html
+++ b/index.html
@@ -426,8 +426,7 @@
                         <div class="col-lg-12">
                             <div class="section-title section-title--3 text-center mb--30">
                                 <h2 class="title">Upcoming Events</h2>
-                                <p>There are many variations of passages of Lorem Ipsum available, <br /> but the
-                                    majority have suffered alteration.</p>
+                                <p>If I'm in your area, and you're looking for a fun night with good music, come join me!</p>
                             </div>
                         </div>
                     </div>
