--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                                     </p>
                                 </div>
                                 <div class="form-wrapper">
-                                    <form>
+                                    <form action="https://formspree.io/f/mnqyggaj" method="POST">
                                         <label htmlFor="item01">
                                             <input type="text" name="name" id="item01" placeholder="Your Name *" />
                                         </label>
